Add support for Passkeys in "Identifier First" Browser login flow